<resources>
    <string name="app_name">Video Calling App</string>
    <string name="action_profile">My Profile</string>
    <string name="action_settings">Settings</string>
    <string name="action_block_list">Block List</string>
    <string name="action_send_request">Send Requests</string>
    <string name="action_logout">Logout</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <string name="action_block_user">Block User</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>